<resources>
    <string name="app_name">OnTheGOShopClient</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logInButton">Login</string>
    <string name="register">Register</string>
    <string name="on_the_go">On The Go</string>
    <string name="search">Search</string>
    <string name="home">home</string>
    <string name="my_cart">my cart</string>
    <string name="my_order">my order</string>
    <string name="my_info">my info</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name:</string>
    <string name="phone_number">Phone number:</string>
    <string name="user_name">User name:</string>
    <string name="my_shopping_cart">My Shopping Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="all_orders">All Orders</string>
    <string name="old_orders">Old Orders</string>
    <string name="storage">Storage</string>
    <string name="vans">Vans</string>
    <string name="drivers">Drivers</string>
    <string name="users">Users</string>
    <string name="orders">Orders</string>
    <string name="new_product">New Product</string>
    <string name="product_name">Product name</string>
    <string name="product_amount">Product Amount</string>
    <string name="product_price">Product Price</string>
    <string name="add_product">add Product</string>
    <string name="new_driver">New Driver</string>
    <string name="driver_full_name">Driver Full name</string>
    <string name="confirm">Confirm Password</string>
    <string name="van_number">Van Number</string>
    <string name="add_driver">Add Driver</string>
    <string name="this_field_is_required">this field is required</string>
    <string name="the_passwords_don_t_match">The passwords don\'t match</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="full_name">Full name</string>
    <string name="add">Add</string>
    <string name="log_out">log out</string>
    <string name="details">details</string>
    <string name="total_price">Total Price:</string>
    <string name="maps_api_key">AIzaSyAKniSH0MaJOvFufHLPVO93q1IaNceypMU</string>
    <string name="driver_info">Driver Info</string>
    <string name="driver_location">Driver location:</string>
    <string name="product_in_the_van">Product in the van:</string>
    <string name="drivers_orders">Drivers orders:</string>
    <string name="van_products">Van products</string>
    <string name="order_id">order id:</string>
    <string name="order_lat">order lat:</string>
    <string name="order_lon">order lon:</string>
    <string name="nav">Nav</string>
</resources>