<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagerViews.NewDriver"
    android:background="@color/background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_driver"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/newDriverTitle"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/newDriverTitle"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbutton"
        android:hint="@string/driver_full_name"
        android:id="@+id/newDriverName"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/newDriverName"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbutton"
        android:hint="@string/phone_number"
        android:id="@+id/newDriverPhone"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/newDriverPhone"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbutton"
        android:hint="@string/username"
        android:id="@+id/newDriverUsername"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/newDriverUsername"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbutton"
        android:hint="@string/password"
        android:id="@+id/newDriverPassword"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/newDriverPassword"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbutton"
        android:hint="@string/confirm"
        android:id="@+id/newDriverConfirmPass"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/newDriverConfirmPass"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbutton"
        android:hint="@string/van_number"
        android:id="@+id/newDriverVan"
        android:inputType="number"
        />
    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/newDriverVan"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbuttonblue"
        android:textColor="@color/white"
        android:text="@string/add_driver"
        android:onClick="addNewDriver"
        />
</RelativeLayout>