<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagerMain"
    android:orientation="vertical"
    android:background="@color/background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:rowCount="5"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">
        <Button
            android:layout_width="match_parent"
            android:text="@string/storage"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:background="@drawable/roundedbuttonmangermain"
            android:onClick="setStorage"
            android:layout_rowWeight="1"
            />
        <Button
            android:layout_width="match_parent"
            android:text="@string/vans"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:background="@drawable/roundedbuttonmangermain"
            android:onClick="setVans"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:text="@string/drivers"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:background="@drawable/roundedbuttonmangermain"
            android:onClick="setDrivers"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:text="@string/users"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:background="@drawable/roundedbuttonmangermain"
            android:onClick="setUsers"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:text="@string/orders"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:background="@drawable/roundedbuttonmangermain"
            android:onClick="setOrders"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            />
    </GridLayout>
</LinearLayout>