<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagerViews.NewProduct"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_product"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <GridLayout
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="5"
        android:layout_gravity="center"
        >
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/product_name"
            android:id="@+id/newProductName"
            android:background="@drawable/roundedbutton"
            android:layout_rowWeight="1"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/product_amount"
            android:id="@+id/newProductAmount"
            android:background="@drawable/roundedbutton"
            android:layout_rowWeight="1"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/product_price"
            android:id="@+id/newProductPrice"
            android:background="@drawable/roundedbutton"
            android:layout_rowWeight="1"
            android:layout_gravity="center"/>
        <TextView
            android:text="image"/>
        <Button
            android:layout_width="300dp"
            android:layout_rowWeight="1"
            android:text="@string/add_product"
            android:background="@drawable/roundedbuttonblue"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

    </GridLayout>

</LinearLayout>