<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.register"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:src="@drawable/loginlogo"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"/>

        <TextView
            android:layout_width="270dp"
            android:layout_height="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/red"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:id="@+id/nameRequired"
            android:text="@string/this_field_is_required"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/fullname"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:hint="@string/full_name"
            android:background="@drawable/roundedbutton"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="270dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/red"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:id="@+id/phoneRequired"
            android:text="@string/this_field_is_required"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:hint="@string/phone_number"
            android:background="@drawable/roundedbutton"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="270dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/red"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:id="@+id/usernameRequired"
            android:text="@string/this_field_is_required"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:hint="@string/username"
            android:background="@drawable/roundedbutton"
            android:layout_gravity="center"
        />
        <TextView
            android:layout_width="270dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/red"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:id="@+id/passRequired"
            android:text="@string/this_field_is_required"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/Password"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/roundedbutton"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="270dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/red"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:id="@+id/passConRequired"
            android:text="@string/the_passwords_don_t_match"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:hint="@string/confirm"
            android:inputType="textPassword"
            android:background="@drawable/roundedbutton"
            android:layout_gravity="center"
            />

        <Button
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/roundedbuttonblue"
            android:text="@string/register"
            android:textColor="@color/white"
            android:onClick="register"
            android:layout_margin="20dp"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>