<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserViews.UserInfoFragment"
    android:orientation="vertical"
    android:background="@color/background">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/personal_information"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:columnCount="2"
            android:rowCount="4"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="70dp"
            android:alignmentMode="alignBounds"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_rowWeight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nametv"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_rowWeight="1"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_rowWeight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/usernametv"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_rowWeight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_rowWeight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phonenumtv"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_rowWeight="1"
                />
            <Button
                android:layout_columnSpan="2"
                android:layout_rowWeight="1"
                android:layout_gravity="center"
                android:text="@string/log_out"
                android:id="@+id/logoutBtn"
                android:textColor="@color/black"/>
        </GridLayout>

</LinearLayout>