<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagerViews.MangerDriverDetails"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:gravity="start"
        android:textSize="16sp"
        android:text="@string/driver_location"
        />
    <fragment
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:id="@+id/driverDetailsMap"
        android:name="com.google.android.gms.maps.SupportMapFragment" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:gravity="start"
        android:textSize="16sp"
        android:text="@string/product_in_the_van"
        />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:id="@+id/driverDetailsList"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:gravity="start"
        android:textSize="16sp"
        android:text="@string/drivers_orders"
        />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:id="@+id/driverDetailsOrderList"
        />
</LinearLayout>