<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome"
        android:textColor="@color/black"
        android:textSize="56sp"
        android:layout_gravity="center"
  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="it is a pleasure to see you again"
        android:textColor="@color/black"
        android:textSize="20sp"

        />
    <EditText
        android:id="@+id/usernameText"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:hint="@string/username"
        android:background="@drawable/roundedbutton"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        />
    <EditText

        android:id="@+id/PasswordText"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:background="@drawable/roundedbutton"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="forgot password ?"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginLeft="60dp"
        />
    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/roundedbuttonblue"
        android:text="@string/logInButton"
        android:textColor="@color/white"
        android:onClick="logIn"/>




</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>